# katas

kata-malloc/: Makefile  benchmark.c
kata-malloc/benchmark/: benchmark.c
kata-malloc/naive-malloc/: Makefile  naive-malloc.c
kata-malloc/tests/: .gitignore  Makefile  README.md  test-malloc.c
kata02-karate-chop/: Makefile  benchmark.cpp  friday.cpp  main.cpp  main.h  monday.cpp  thursday.cpp  tuesday.cpp  wednesday.cpp
kata04-data-munging/: .gitignore  CMakeLists.txt  README.md
kata04-data-munging/src/part1/: part1.cpp
